--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.examples.android.androidtrainingbzu">
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ViewsActivity_1"></activity>
+        android:theme="@style/StyledActivity">
+        <activity android:name=".WebviewActivity" android:icon="@drawable/internet_ico" android:theme="@style/StyledActivity"
+            android:label="Demo Browser"
+            >
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="http"/>
+                <data android:scheme="https"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".ViewsActivity_1" />
         <activity android:name=".ReceiveTextActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -29,8 +41,10 @@
                 <data android:scheme="http" />
             </intent-filter>
         </activity>
+        <!--windowSoftInputMode to hide the soft keyboard when the activity starts because the first element is edittext-->
         <activity
             android:name=".ImplicitActivity"
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/StyledActivity" />
         <activity
             android:name=".NameActivity"
@@ -50,7 +64,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
