--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     package="com.examples.android.androidtrainingbzu">
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,15 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/StyledActivity">
-        <activity android:name=".WebviewActivity" android:icon="@drawable/internet_ico" android:theme="@style/StyledActivity"
+        <activity android:name=".MenusActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.examples.android.androidtrainingbzu.MainActivity" />
+        </activity>
+        <activity android:name=".MotionEventActivity" />
+        <activity android:name=".ScaleGestureDetectorActivity" />
+        <activity android:name=".DialogsActivity" />
+        <activity
+            android:name=".WebviewActivity"
+            android:icon="@drawable/internet_ico"
             android:label="Demo Browser"
-            >
+            android:theme="@style/StyledActivity">
             <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http"/>
-                <data android:scheme="https"/>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
             </intent-filter>
         </activity>
         <activity android:name=".ViewsActivity_1" />
@@ -40,12 +53,11 @@
 
                 <data android:scheme="http" />
             </intent-filter>
-        </activity>
-        <!--windowSoftInputMode to hide the soft keyboard when the activity starts because the first element is edittext-->
+        </activity> <!-- windowSoftInputMode to hide the soft keyboard when the activity starts because the first element is edittext -->
         <activity
             android:name=".ImplicitActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/StyledActivity" />
+            android:theme="@style/StyledActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".NameActivity"
             android:theme="@style/StyledActivity" />
@@ -56,14 +68,12 @@
             android:name=".ActivityLifcycle"
             android:theme="@style/StyledActivity" />
         <activity
-            android:name=".LifeCycleOfActivity"
-            android:theme="@style/StyledActivity" />
-        <activity
             android:name=".LongTextActivity"
             android:theme="@style/StyledActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
