--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/StyledActivity">
-        <activity android:name=".MenusActivity"
+        <activity
+            android:name=".TabsActivity"
+            android:label="@string/title_activity_tabs"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.examples.android.androidtrainingbzu.MainActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.examples.android.androidtrainingbzu.MainActivity" />
+        </activity>
+        <activity
+            android:name=".MenusActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.examples.android.androidtrainingbzu.MainActivity" />
         </activity>
         <activity android:name=".MotionEventActivity" />
         <activity android:name=".ScaleGestureDetectorActivity" />
@@ -30,8 +40,10 @@
             android:theme="@style/StyledActivity">
             <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="http" />
                 <data android:scheme="https" />
             </intent-filter>
